Evaluant.Calculator/NCalcParser.cs
// $ANTLR 3.3 Nov 30, 2010 12:50:56 NCalc.g 2013-08-30 12:41:20

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using System.Text;
using System.Globalization;
using System.Collections.Generic;
using NCalc.Domain;


using System.Collections.Generic;
using Antlr.Runtime;
using Stack = System.Collections.Generic.Stack<object>;
using List = System.Collections.IList;
using ArrayList = System.Collections.Generic.List<object>;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3 Nov 30, 2010 12:50:56")]
[System.CLSCompliant(false)]
public partial class NCalcParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "INTEGER", "FLOAT", "STRING", "DATETIME", "TRUE", "FALSE", "ID", "NAME", "LETTER", "DIGIT", "E", "EscapeSequence", "UnicodeEscape", "HexDigit", "WS", "'?'", "':'", "'||'", "'or'", "'&&'", "'and'", "'|'", "'^'", "'&'", "'=='", "'='", "'!='", "'<>'", "'<'", "'<='", "'>'", "'>='", "'<<'", "'>>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'not'", "'~'", "'('", "')'", "','"
	};
	public const int EOF=-1;
	public const int T__19=19;
	public const int T__20=20;
	public const int T__21=21;
	public const int T__22=22;
	public const int T__23=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int T__48=48;
	public const int INTEGER=4;
	public const int FLOAT=5;
	public const int STRING=6;
	public const int DATETIME=7;
	public const int TRUE=8;
	public const int FALSE=9;
	public const int ID=10;
	public const int NAME=11;
	public const int LETTER=12;
	public const int DIGIT=13;
	public const int E=14;
	public const int EscapeSequence=15;
	public const int UnicodeEscape=16;
	public const int HexDigit=17;
	public const int WS=18;

	// delegates
	// delegators

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public NCalcParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public NCalcParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = null;
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();

		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}
		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return NCalcParser.tokenNames; } }
	public override string GrammarFileName { get { return "NCalc.g"; } }


	private const char BS = '\\';
	private static NumberFormatInfo numberFormatInfo = new NumberFormatInfo();

	private string extractString(string text) {
	    
	    StringBuilder sb = new StringBuilder(text);
	    int startIndex = 1; // Skip initial quote
	    int slashIndex = -1;

	    while ((slashIndex = sb.ToString().IndexOf(BS, startIndex)) != -1)
	    {
	        char escapeType = sb[slashIndex + 1];
	        switch (escapeType)
	        {
	            case 'u':
	              string hcode = String.Concat(sb[slashIndex+4], sb[slashIndex+5]);
	              string lcode = String.Concat(sb[slashIndex+2], sb[slashIndex+3]);
	              char unicodeChar = Encoding.Unicode.GetChars(new byte[] { System.Convert.ToByte(hcode, 16), System.Convert.ToByte(lcode, 16)} )[0];
	              sb.Remove(slashIndex, 6).Insert(slashIndex, unicodeChar); 
	              break;
	            case 'n': sb.Remove(slashIndex, 2).Insert(slashIndex, '\n'); break;
	            case 'r': sb.Remove(slashIndex, 2).Insert(slashIndex, '\r'); break;
	            case 't': sb.Remove(slashIndex, 2).Insert(slashIndex, '\t'); break;
	            case '\'': sb.Remove(slashIndex, 2).Insert(slashIndex, '\''); break;
	            case '\\': sb.Remove(slashIndex, 2).Insert(slashIndex, '\\'); break;
	            default: throw new RecognitionException("Unvalid escape sequence: \\" + escapeType);
	        }

	        startIndex = slashIndex + 1;

	    }

	    sb.Remove(0, 1);
	    sb.Remove(sb.Length - 1, 1);

	    return sb.ToString();
	}

	public List<string> Errors { get; private set; }

	public override void DisplayRecognitionError(String[] tokenNames, RecognitionException e) {
	    
	    base.DisplayRecognitionError(tokenNames, e);
	    
	    if(Errors == null)
	    {
	    	Errors = new List<string>();
	    }
	    
	    String hdr = GetErrorHeader(e);
	    String msg = GetErrorMessage(e, tokenNames);
	    Errors.Add(msg + " at " + hdr);
	}


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public class ncalcExpression_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		public LogicalExpression value;
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_ncalcExpression();
	partial void Leave_ncalcExpression();

	// $ANTLR start "ncalcExpression"
	// NCalc.g:77:1: ncalcExpression returns [LogicalExpression value] : logicalExpression EOF ;
	[GrammarRule("ncalcExpression")]
	internal NCalcParser.ncalcExpression_return ncalcExpression()
	{
		Enter_ncalcExpression();
		EnterRule("ncalcExpression", 1);
		TraceIn("ncalcExpression", 1);
		NCalcParser.ncalcExpression_return retval = new NCalcParser.ncalcExpression_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken EOF2=null;
		NCalcParser.logicalExpression_return logicalExpression1 = default(NCalcParser.logicalExpression_return);

		object EOF2_tree=null;

		try { DebugEnterRule(GrammarFileName, "ncalcExpression");
		DebugLocation(77, 1);
		try
		{
			// NCalc.g:78:2: ( logicalExpression EOF )
			DebugEnterAlt(1);
			// NCalc.g:78:4: logicalExpression EOF
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(78, 4);
			PushFollow(Follow._logicalExpression_in_ncalcExpression50);
			logicalExpression1=logicalExpression();
			PopFollow();

			adaptor.AddChild(root_0, logicalExpression1.Tree);
			DebugLocation(78, 25);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_ncalcExpression52); 
			DebugLocation(78, 27);
			retval.value = (logicalExpression1!=null?logicalExpression1.value:default(LogicalExpression)); 

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("ncalcExpression", 1);
			LeaveRule("ncalcExpression", 1);
			Leave_ncalcExpression();
		}
		DebugLocation(79, 1);
		} finally { DebugExitRule(GrammarFileName, "ncalcExpression"); }
		return retval;

	}
	// $ANTLR end "ncalcExpression"

	public class logicalExpression_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		public LogicalExpression value;
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_logicalExpression();
	partial void Leave_logicalExpression();

	// $ANTLR start "logicalExpression"
	// NCalc.g:81:1: logicalExpression returns [LogicalExpression value] : left= conditionalExpression ( '?' middle= conditionalExpression ':' right= conditionalExpression )? ;
	[GrammarRule("logicalExpression")]
	private NCalcParser.logicalExpression_return logicalExpression()
	{
		Enter_logicalExpression();
		EnterRule("logicalExpression", 2);
		TraceIn("logicalExpression", 2);
		NCalcParser.logicalExpression_return retval = new NCalcParser.logicalExpression_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken char_literal3=null;
		IToken char_literal4=null;
		NCalcParser.conditionalExpression_return left = default(NCalcParser.conditionalExpression_return);
		NCalcParser.conditionalExpression_return middle = default(NCalcParser.conditionalExpression_return);
		NCalcParser.conditionalExpression_return right = default(NCalcParser.conditionalExpression_return);

		object char_literal3_tree=null;
		object char_literal4_tree=null;

		try { DebugEnterRule(GrammarFileName, "logicalExpression");
		DebugLocation(81, 1);
		try
		{
			// NCalc.g:82:2: (left= conditionalExpression ( '?' middle= conditionalExpression ':' right= conditionalExpression )? )
			DebugEnterAlt(1);
			// NCalc.g:82:4: left= conditionalExpression ( '?' middle= conditionalExpression ':' right= conditionalExpression )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(82, 8);
			PushFollow(Follow._conditionalExpression_in_logicalExpression72);
			left=conditionalExpression();
			PopFollow();

			adaptor.AddChild(root_0, left.Tree);
			DebugLocation(82, 31);
			 retval.value = (left!=null?left.value:default(LogicalExpression)); 
			DebugLocation(82, 57);
			// NCalc.g:82:57: ( '?' middle= conditionalExpression ':' right= conditionalExpression )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, decisionCanBacktrack[1]);
			int LA1_0 = input.LA(1);

			if ((LA1_0==19))
			{
				alt1=1;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// NCalc.g:82:59: '?' middle= conditionalExpression ':' right= conditionalExpression
				{
				DebugLocation(82, 59);
				char_literal3=(IToken)Match(input,19,Follow._19_in_logicalExpression78); 
				char_literal3_tree = (object)adaptor.Create(char_literal3);
				adaptor.AddChild(root_0, char_literal3_tree);

				DebugLocation(82, 69);
				PushFollow(Follow._conditionalExpression_in_logicalExpression82);
				middle=conditionalExpression();
				PopFollow();

				adaptor.AddChild(root_0, middle.Tree);
				DebugLocation(82, 92);
				char_literal4=(IToken)Match(input,20,Follow._20_in_logicalExpression84); 
				char_literal4_tree = (object)adaptor.Create(char_literal4);
				adaptor.AddChild(root_0, char_literal4_tree);

				DebugLocation(82, 101);
				PushFollow(Follow._conditionalExpression_in_logicalExpression88);
				right=conditionalExpression();
				PopFollow();

				adaptor.AddChild(root_0, right.Tree);
				DebugLocation(82, 124);
				 retval.value = new TernaryExpression((left!=null?left.value:default(LogicalExpression)), (middle!=null?middle.value:default(LogicalExpression)), (right!=null?right.value:default(LogicalExpression))); 

				}
				break;

			}
			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("logicalExpression", 2);
			LeaveRule("logicalExpression", 2);
			Leave_logicalExpression();
		}
		DebugLocation(83, 1);
		} finally { DebugExitRule(GrammarFileName, "logicalExpression"); }
		return retval;

	}
	// $ANTLR end "logicalExpression"

	public class conditionalExpression_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		public LogicalExpression value;
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_conditionalExpression();
	partial void Leave_conditionalExpression();

	// $ANTLR start "conditionalExpression"
	// NCalc.g:85:1: conditionalExpression returns [LogicalExpression value] : left= booleanAndExpression ( ( '||' | 'or' ) right= conditionalExpression )* ;
	[GrammarRule("conditionalExpression")]
	private NCalcParser.conditionalExpression_return conditionalExpression()
	{
		Enter_conditionalExpression();
		EnterRule("conditionalExpression", 3);
		TraceIn("conditionalExpression", 3);
		NCalcParser.conditionalExpression_return retval = new NCalcParser.conditionalExpression_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken set5=null;
		NCalcParser.booleanAndExpression_return left = default(NCalcParser.booleanAndExpression_return);
		NCalcParser.conditionalExpression_return right = default(NCalcParser.conditionalExpression_return);

		object set5_tree=null;


		BinaryExpressionType type = BinaryExpressionType.Unknown;

		try { DebugEnterRule(GrammarFileName, "conditionalExpression");
		DebugLocation(85, 1);
		try
		{
			// NCalc.g:89:2: (left= booleanAndExpression ( ( '||' | 'or' ) right= conditionalExpression )* )
			DebugEnterAlt(1);
			// NCalc.g:89:4: left= booleanAndExpression ( ( '||' | 'or' ) right= conditionalExpression )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(89, 8);
			PushFollow(Follow._booleanAndExpression_in_conditionalExpression115);
			left=booleanAndExpression();
			PopFollow();

			adaptor.AddChild(root_0, left.Tree);
			DebugLocation(89, 30);
			 retval.value = (left!=null?left.value:default(LogicalExpression)); 
			DebugLocation(89, 56);
			// NCalc.g:89:56: ( ( '||' | 'or' ) right= conditionalExpression )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, decisionCanBacktrack[2]);
				int LA2_0 = input.LA(1);

				if (((LA2_0>=21 && LA2_0<=22)))
				{
					alt2=1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// NCalc.g:90:4: ( '||' | 'or' ) right= conditionalExpression
					{
					DebugLocation(90, 4);
					set5=(IToken)input.LT(1);
					if ((input.LA(1)>=21 && input.LA(1)<=22))
					{
						input.Consume();
						adaptor.AddChild(root_0, (object)adaptor.Create(set5));
						state.errorRecovery=false;
					}
					else
					{
						MismatchedSetException mse = new MismatchedSetException(null,input);
						DebugRecognitionException(mse);
						throw mse;
					}

					DebugLocation(90, 18);
					 type = BinaryExpressionType.Or; 
					DebugLocation(91, 9);
					PushFollow(Follow._conditionalExpression_in_conditionalExpression140);
					right=conditionalExpression();
					PopFollow();

					adaptor.AddChild(root_0, right.Tree);
					DebugLocation(91, 32);
					 retval.value = new BinaryExpression(type, retval.value, (right!=null?right.value:default(LogicalExpression))); 

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("conditionalExpression", 3);
			LeaveRule("conditionalExpression", 3);
			Leave_conditionalExpression();
		}
		DebugLocation(93, 1);
		} finally { DebugExitRule(GrammarFileName, "conditionalExpression"); }
		return retval;

	}
	// $ANTLR end "conditionalExpression"

	public class booleanAndExpression_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		public LogicalExpression value;
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_booleanAndExpression();
	partial void Leave_booleanAndExpression();

	// $ANTLR start "booleanAndExpression"
	// NCalc.g:95:1: booleanAndExpression returns [LogicalExpression value] : left= bitwiseOrExpression ( ( '&&' | 'and' ) right= bitwiseOrExpression )* ;
	[GrammarRule("booleanAndExpression")]
	private NCalcParser.booleanAndExpression_return booleanAndExpression()
	{
		Enter_booleanAndExpression();
		EnterRule("booleanAndExpression", 4);
		TraceIn("booleanAndExpression", 4);
		NCalcParser.booleanAndExpression_return retval = new NCalcParser.booleanAndExpression_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken set6=null;
		NCalcParser.bitwiseOrExpression_return left = default(NCalcParser.bitwiseOrExpression_return);
		NCalcParser.bitwiseOrExpression_return right = default(NCalcParser.bitwiseOrExpression_return);

		object set6_tree=null;


		BinaryExpressionType type = BinaryExpressionType.Unknown;

		try { DebugEnterRule(GrammarFileName, "booleanAndExpression");
		DebugLocation(95, 1);
		try
		{
			// NCalc.g:99:2: (left= bitwiseOrExpression ( ( '&&' | 'and' ) right= bitwiseOrExpression )* )
			DebugEnterAlt(1);
			// NCalc.g:99:4: left= bitwiseOrExpression ( ( '&&' | 'and' ) right= bitwiseOrExpression )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(99, 8);
			PushFollow(Follow._bitwiseOrExpression_in_booleanAndExpression174);
			left=bitwiseOrExpression();
			PopFollow();

			adaptor.AddChild(root_0, left.Tree);
			DebugLocation(99, 29);
			 retval.value = (left!=null?left.value:default(LogicalExpression)); 
			DebugLocation(99, 55);
			// NCalc.g:99:55: ( ( '&&' | 'and' ) right= bitwiseOrExpression )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, decisionCanBacktrack[3]);
				int LA3_0 = input.LA(1);

				if (((LA3_0>=23 && LA3_0<=24)))
				{
					alt3=1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// NCalc.g:100:4: ( '&&' | 'and' ) right= bitwiseOrExpression
					{
					DebugLocation(100, 4);
					set6=(IToken)input.LT(1);
					if ((input.LA(1)>=23 && input.LA(1)<=24))
					{
						input.Consume();
						adaptor.AddChild(root_0, (object)adaptor.Create(set6));
						state.errorRecovery=false;
					}
					else
					{
						MismatchedSetException mse = new MismatchedSetException(null,input);
						DebugRecognitionException(mse);
						throw mse;
					}

					DebugLocation(100, 19);
					 type = BinaryExpressionType.And; 
					DebugLocation(101, 9);
					PushFollow(Follow._bitwiseOrExpression_in_booleanAndExpression199);
					right=bitwiseOrExpression();
					PopFollow();

					adaptor.AddChild(root_0, right.Tree);
					DebugLocation(101, 30);
					 retval.value = new BinaryExpression(type, retval.value, (right!=null?right.value:default(LogicalExpression))); 

					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("booleanAndExpression", 4);
			LeaveRule("booleanAndExpression", 4);
			Leave_booleanAndExpression();
		}
		DebugLocation(103, 1);
		} finally { DebugExitRule(GrammarFileName, "booleanAndExpression"); }
		return retval;

	}
	// $ANTLR end "booleanAndExpression"

	public class bitwiseOrExpression_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		public LogicalExpression value;
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_bitwiseOrExpression();
	partial void Leave_bitwiseOrExpression();

	// $ANTLR start "bitwiseOrExpression"
	// NCalc.g:105:1: bitwiseOrExpression returns [LogicalExpression value] : left= bitwiseXOrExpression ( '|' right= bitwiseOrExpression )* ;
	[GrammarRule("bitwiseOrExpression")]
	private NCalcParser.bitwiseOrExpression_return bitwiseOrExpression()
	{
		Enter_bitwiseOrExpression();
		EnterRule("bitwiseOrExpression", 5);
		TraceIn("bitwiseOrExpression", 5);
		NCalcParser.bitwiseOrExpression_return retval = new NCalcParser.bitwiseOrExpression_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken char_literal7=null;
		NCalcParser.bitwiseXOrExpression_return left = default(NCalcParser.bitwiseXOrExpression_return);
		NCalcParser.bitwiseOrExpression_return right = default(NCalcParser.bitwiseOrExpression_return);

		object char_literal7_tree=null;


		BinaryExpressionType type = BinaryExpressionType.Unknown;

		try { DebugEnterRule(GrammarFileName, "bitwiseOrExpression");
		DebugLocation(105, 1);
		try
		{
			// NCalc.g:109:2: (left= bitwiseXOrExpression ( '|' right= bitwiseOrExpression )* )
			DebugEnterAlt(1);
			// NCalc.g:109:4: left= bitwiseXOrExpression ( '|' right= bitwiseOrExpression )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(109, 8);
			PushFollow(Follow._bitwiseXOrExpression_in_bitwiseOrExpression231);
			left=bitwiseXOrExpression();
			PopFollow();

